# MarketMonitor

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_market_monitor.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-checks.yml
deployments/: README.md
deployments/docker/: README.md
deployments/docker-compose/: README.md  docker-compose.yml
deployments/docker-compose/docker/: build.ps1  build.sh  catalog-service.Dockerfile  streamer.Dockerfile  ui-backend.Dockerfile  ui-frontend.Dockerfile
deployments/docker-compose/k8s/: README.md  apply.ps1  apply.sh  catalog-cronjob.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  redis-deployment.yaml  secrets.yaml  streamer-deployment.yaml  timescaledb-statefulset.yaml  (+2 more)
deployments/k8s/: README.md
migrations/: 001_initial.sql
scripts/: check_boundaries.py
src/: setup.py
src/auth_service/: README.md  __init__.py  __main__.py  cli.py  oauth_client.py
src/catalog_service/: README.md  __init__.py  __main__.py  mtf_loader.py  upstox_loader.py
src/common/: README.md  __init__.py  config.py  exceptions.py  logging.py  utils.py  validator.py
src/scripts/: README.md  service_launcher.py  start-services.ps1  start-services.sh  stop-services.ps1  stop-services.sh
src/stream_service/: README.md  __init__.py  __main__.py
src/ui/: README.md
src/ui/backend/: api.py  (+3 more)
tests/: __init__.py  conftest.py  test_auth_service.py  test_config.py  test_postgres_repository.py  test_redis_cache.py  test_services.py  test_ui_backend.py
(+18 files in other folders)
